Titlecase some items

--- a/src/epub/text/endnotes.xhtml
+++ b/src/epub/text/endnotes.xhtml
@@ -220,7 +220,7 @@
 					<p>See note on <a href="book-1.xhtml#book-1-45-3">Julius, 45.3</a>. <a href="book-1.xhtml#noteref-70" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-71" epub:type="endnote">
-					<p>The <i xml:lang="la">pons suffragiorum</i>, a temporary bridge of planks over which the voters passed one by one, to cast their ballots; Cicero, <i epub:type="se:name.publication.book">Epistularum Ad Atticum</i> <span epub:type="z3998:roman">I</span>.14; Ovid, <i epub:type="se:name.publication.book">Fasti</i>, <span epub:type="z3998:roman">V</span>.634. <a href="book-1.xhtml#noteref-71" epub:type="backlink">↩</a></p>
+					<p>The <i xml:lang="la">pons suffragiorum</i>, a temporary bridge of planks over which the voters passed one by one, to cast their ballots; Cicero, <i epub:type="se:name.publication.book" xml:lang="es">Epistularum ad Atticum</i> <span epub:type="z3998:roman">I</span>.14; Ovid, <i epub:type="se:name.publication.book">Fasti</i>, <span epub:type="z3998:roman">V</span>.634. <a href="book-1.xhtml#noteref-71" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-72" epub:type="endnote">
 					<p>Properly said of a temple; according to Florus, <i epub:type="se:name.publication.book">Epitome of Roman History</i> 4.2.91; one of the honours bestowed on Caesar was <i xml:lang="la">fastigium in domo</i>; <abbr>cf.</abbr> Plutarch, <i epub:type="se:name.publication.book">Caesar</i>, <span epub:type="z3998:roman">LXIII</span>. <a href="book-1.xhtml#noteref-72" epub:type="backlink">↩</a></p>
@@ -253,7 +253,7 @@
 					<p>In his Memoirs; see <a href="book-2.xhtml#book-2-85">Augustus, 85.1</a>. <a href="book-2.xhtml#noteref-81" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-82" epub:type="endnote">
-					<p>Cicero, <i epub:type="se:name.publication.book">Epistularum Ad Quintum Fratrem</i> 1.1.21. <a href="book-2.xhtml#noteref-82" epub:type="backlink">↩</a></p>
+					<p>Cicero, <i epub:type="se:name.publication.book" xml:lang="la">Epistularum ad Quintum Fratrem</i> 1.1.21. <a href="book-2.xhtml#noteref-82" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-83" epub:type="endnote">
 					<p>Quintus Cicero was really <i xml:lang="la">propraetor</i>; see note on <a href="book-1.xhtml#book-1-54">Julius, 54.1</a>. <a href="book-2.xhtml#noteref-83" epub:type="backlink">↩</a></p>
@@ -277,7 +277,7 @@
 					<p>Since the time of Sulla only senators were eligible for the position of tribune. <a href="book-2.xhtml#noteref-89" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-90" epub:type="endnote">
-					<p>Cicero <i epub:type="se:name.publication.book">Epistularum Ad Familiares</i> 11.20.1; according to Velleius Paterculus, <i epub:type="se:name.publication.book">Historiae Romanae</i> 2.62.6, Cicero punned on the double meaning of <i xml:lang="la">tollo</i>, “raise” and “put out of the way.” <a href="book-2.xhtml#noteref-90" epub:type="backlink">↩</a></p>
+					<p>Cicero <i epub:type="se:name.publication.book" xml:lang="la">Epistularum ad Familiares</i> 11.20.1; according to Velleius Paterculus, <i epub:type="se:name.publication.book">Historiae Romanae</i> 2.62.6, Cicero punned on the double meaning of <i xml:lang="la">tollo</i>, “raise” and “put out of the way.” <a href="book-2.xhtml#noteref-90" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-91" epub:type="endnote">
 					<p>A game still common in Italy, in which the contestants thrust out their fingers (<i xml:lang="la">micare digitis</i>), the one naming correctly the number thrust out by his opponent being the winner. <a href="book-2.xhtml#noteref-91" epub:type="backlink">↩</a></p>
@@ -607,7 +607,7 @@
 					<p>See <a href="book-2.xhtml#book-2-81">Augustus, 81</a> at the end. <a href="book-2.xhtml#noteref-199" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-200" epub:type="endnote">
-					<p>Brutus published a eulogy of Cato in 46 <abbr epub:type="se:era">BC</abbr>; <abbr>cf.</abbr> Cicero <i epub:type="se:name.publication.book">Epistularum Ad Atticum</i> 12.21. <a href="book-2.xhtml#noteref-200" epub:type="backlink">↩</a></p>
+					<p>Brutus published a eulogy of Cato in 46 <abbr epub:type="se:era">BC</abbr>; <abbr>cf.</abbr> Cicero <i epub:type="se:name.publication.book" xml:lang="es">Epistularum ad Atticum</i> 12.21. <a href="book-2.xhtml#noteref-200" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-201" epub:type="endnote">
 					<p>Evidently two archaizing grammarians of the day. <a href="book-2.xhtml#noteref-201" epub:type="backlink">↩</a></p>
@@ -916,7 +916,7 @@
 					<p>Taking refuge in temples and holy places, to avoid punishment for crimes; for its abuse see Tacitus <i epub:type="se:name.publication.book">Annals</i> 3.60. <a href="book-3.xhtml#noteref-302" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-303" epub:type="endnote">
-					<p>The same proverb is mentioned by Cicero, <i epub:type="se:name.publication.book">Epistularum Ad Atticum</i> 13.12. The reference is to an Athenian actor of mimes, who imitated the movements of running but remained in the same spot. <a href="book-3.xhtml#noteref-303" epub:type="backlink">↩</a></p>
+					<p>The same proverb is mentioned by Cicero, <i epub:type="se:name.publication.book" xml:lang="es">Epistularum ad Atticum</i> 13.12. The reference is to an Athenian actor of mimes, who imitated the movements of running but remained in the same spot. <a href="book-3.xhtml#noteref-303" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-304" epub:type="endnote">
 					<p>That is, to make some amends for his conduct. <a href="book-3.xhtml#noteref-304" epub:type="backlink">↩</a></p>
@@ -2386,7 +2386,7 @@
 					<p>A pillar covered with gilded bronze, erected by Augustus, in 20 <abbr epub:type="se:era">BC</abbr>, on which were engraved the names of the principal cities of the empire and their distance from Rome. The Roman roads were supposed to converge at that point, but the distances on them were reckoned from the gates. <a href="book-7.xhtml#noteref-792" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-793" epub:type="endnote">
-					<p>Proverbial of undertaking something beyond one’s powers; <abbr>cf.</abbr> Cicero <i epub:type="se:name.publication.book">Epistularum Ad Atticum</i> <span epub:type="z3998:roman">II</span>.16. <a href="book-7.xhtml#noteref-793" epub:type="backlink">↩</a></p>
+					<p>Proverbial of undertaking something beyond one’s powers; <abbr>cf.</abbr> Cicero <i epub:type="se:name.publication.book" xml:lang="es">Epistularum ad Atticum</i> <span epub:type="z3998:roman">II</span>.16. <a href="book-7.xhtml#noteref-793" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-794" epub:type="endnote">
 					<p>To Ostia. <a href="book-7.xhtml#noteref-794" epub:type="backlink">↩</a></p>
@@ -2497,7 +2497,7 @@
 					<p>A duty (<i xml:lang="la">portorium</i>) of two and a half percent on imports and exports; <abbr>cf.</abbr> <a href="book-1.xhtml#book-1-43">Julius, 43.1</a>. <a href="book-8.xhtml#noteref-829" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-830" epub:type="endnote">
-					<p>A position held by tried and skilful officers, especially centurions of the first grade (<i xml:lang="la">primipili</i>; CIL <span epub:type="z3998:roman">III</span>.6809, <abbr>etc.</abbr>) <abbr>Cf.</abbr> Vegetius, <i epub:type="se:name.publication.book">Epitoma rei militaris</i> 2.10, <i xml:lang="la">is post longam probatamque militiam peritissimus omnium legebatur, ut recte doceret alios quod ipse cum laude fecisset</i>. <a href="book-8.xhtml#noteref-830" epub:type="backlink">↩</a></p>
+					<p>A position held by tried and skilful officers, especially centurions of the first grade (<i xml:lang="la">primipili</i>; CIL <span epub:type="z3998:roman">III</span>.6809, <abbr>etc.</abbr>) <abbr>Cf.</abbr> Vegetius, <i epub:type="se:name.publication.book" xml:lang="la">Epitoma rei militaris</i> 2.10, <i xml:lang="la">is post longam probatamque militiam peritissimus omnium legebatur, ut recte doceret alios quod ipse cum laude fecisset</i>. <a href="book-8.xhtml#noteref-830" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-831" epub:type="endnote">
 					<p>The <i xml:lang="la">anteambulo</i> was the client who walked before his patron on the street and compelled people to make way for him; <abbr>cf.</abbr> <i epub:type="se:name.publication.book">Epigrams of Martial</i> 2.18.5, <i xml:lang="la">tumidique anteambulo regis</i>, where <i xml:lang="la">regis</i> means “patron,” as in Horace <i epub:type="se:name.publication.book">Epistles</i> 1.17.43 and elsewhere. <a href="book-8.xhtml#noteref-831" epub:type="backlink">↩</a></p>
@@ -2773,7 +2773,7 @@
 					<p>That is, those which had formerly been restricted to the senatorial order. <a href="book-8.xhtml#noteref-921" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-922" epub:type="endnote">
-					<p>Where the soldiers deposited their surplus money with the general for safe keeping, until the end of their term of service; see <i epub:type="se:name.publication.book">Vegetius</i> 2.20 and for fuller details Grenfell, Hunt, and Hogarth, <i epub:type="se:name.publication.book">Fayoum Towns and their Papyri</i>, <abbr>pp.</abbr> 252 <abbr class="eoc"><abbr>ff.</abbr></abbr>, where the accounts of two soldiers of about the year 180 are published. <a href="book-8.xhtml#noteref-922" epub:type="backlink">↩</a></p>
+					<p>Where the soldiers deposited their surplus money with the general for safe keeping, until the end of their term of service; see <i epub:type="se:name.publication.book">Vegetius</i> 2.20 and for fuller details Grenfell, Hunt, and Hogarth, <i epub:type="se:name.publication.book">Fayoum Towns and Their Papyri</i>, <abbr>pp.</abbr> 252 <abbr class="eoc"><abbr>ff.</abbr></abbr>, where the accounts of two soldiers of about the year 180 are published. <a href="book-8.xhtml#noteref-922" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-923" epub:type="endnote">
 					<p>That is, raised the amount from nine to twelve <i xml:lang="la">aurei</i>. The <i xml:lang="la">aureus</i> contained 100 sesterces and was equal to a little over a pound sterling, or five dollars. <a href="book-8.xhtml#noteref-923" epub:type="backlink">↩</a></p>
