--- a/src/epub/text/endnotes.xhtml
+++ b/src/epub/text/endnotes.xhtml
@@ -2773,7 +2773,7 @@
 					<p>That is, those which had formerly been restricted to the senatorial order. <a href="book-8.xhtml#noteref-921" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-922" epub:type="endnote">
-					<p>Where the soldiers deposited their surplus money with the general for safe keeping, until the end of their term of service; see <i epub:type="se:name.publication.book">Vegetius</i> 2.20 and for fuller details Grenfell, Hunt, and Hogarth, <i epub:type="se:name.publication.book">Fayoum Towns and Their Papyri</i>, <abbr>pp.</abbr> 252 <abbr class="eoc"><abbr>ff.</abbr></abbr>, where the accounts of two soldiers of about the year 180 are published. <a href="book-8.xhtml#noteref-922" epub:type="backlink">↩</a></p>
+					<p>Where the soldiers deposited their surplus money with the general for safe keeping, until the end of their term of service; see <i epub:type="se:name.publication.book">Vegetius</i> 2.20 and for fuller details Grenfell, Hunt, and Hogarth, <i epub:type="se:name.publication.book">Fayoum Towns and Their Papyri</i>, <abbr>pp.</abbr> 252 <abbr>ff.</abbr>, where the accounts of two soldiers of about the year 180 are published. <a href="book-8.xhtml#noteref-922" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-923" epub:type="endnote">
 					<p>That is, raised the amount from nine to twelve <i xml:lang="la">aurei</i>. The <i xml:lang="la">aureus</i> contained 100 sesterces and was equal to a little over a pound sterling, or five dollars. <a href="book-8.xhtml#noteref-923" epub:type="backlink">↩</a></p>
