--- a/src/epub/text/colophon.xhtml
+++ b/src/epub/text/colophon.xhtml
@@ -19,7 +19,7 @@
 			<p>This ebook was produced for<br/>
 			<a href="https://standardebooks.org">Standard Ebooks</a><br/>
 			by<br/>
-			<a href="https://rightword.com.au/david.php">David Grigg</a>,<br/>
+			<a href="https://thegriggs.org/david/">David Grigg</a>,<br/>
 			and is based on a transcription produced by<br/>
 			<a href="http://penelope.uchicago.edu/Thayer/E/home.html">Bill Thayer</a><br/>
 			and on digital scans available at the<br/>
