Fix incorrect elements in colophon

--- a/src/epub/text/colophon.xhtml
+++ b/src/epub/text/colophon.xhtml
@@ -29,7 +29,7 @@
 			a painting completed in 1885 by<br/>
 			<a href="https://en.wikipedia.org/wiki/Lawrence_Alma-Tadema">Lawrence Alma-Tadema</a>.<br/>
 			The cover and title pages feature the<br/>
-			<a epub:type="se:name.visual-art.typeface">League Spartan</a> and <a epub:type="se:name.visual-art.typeface">Sorts Mill Goudy</a><br/>
+			<b epub:type="se:name.visual-art.typeface">League Spartan</b> and <b epub:type="se:name.visual-art.typeface">Sorts Mill Goudy</b><br/>
 			typefaces created in 2014 and 2009 by<br/>
 			<a href="https://www.theleagueofmoveabletype.com">The League of Moveable Type</a>.</p>
 			<p>The first edition of this ebook was released on<br/>
