--- a/src/epub/text/titlepage.xhtml
+++ b/src/epub/text/titlepage.xhtml
@@ -7,7 +7,10 @@
 	</head>
 	<body epub:type="frontmatter">
 		<section id="titlepage" epub:type="titlepage">
-			<img alt="The titlepage for the Standard Ebooks edition of The Lives of the Caesars, by Suetonius. Translated by J. C. Rolfe" src="../images/titlepage.svg" epub:type="se:image.color-depth.black-on-transparent"/>
+			<h1 epub:type="title">The Lives of the Caesars</h1>
+			<p>By <b epub:type="z3998:personal-name z3998:author">Suetonius</b>.</p>
+			<p>Translated by <b epub:type="z3998:personal-name z3998:translator"><abbr epub:type="z3998:given-name">J. C.</abbr> Rolfe</b>.</p>
+			<img alt="" src="../images/titlepage.svg" epub:type="se:image.color-depth.black-on-transparent"/>
 		</section>
 	</body>
 </html>
