Tweak quotation marks

--- a/src/epub/text/endnotes.xhtml
+++ b/src/epub/text/endnotes.xhtml
@@ -184,7 +184,7 @@
 					<p><i xml:lang="la">Rostratae naves</i>, ships of war provided with brazen beaks (<i xml:lang="la">rostra</i>) or rams. <a href="book-1.xhtml#noteref-58" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-59" epub:type="endnote">
-					<p>Probably some woodcutter’s hut; <i xml:lang="la">deversorium</i> means ‘inn, lodging.’ <a href="book-1.xhtml#noteref-59" epub:type="backlink">↩</a></p>
+					<p>Probably some woodcutter’s hut; <i xml:lang="la">deversorium</i> means “inn, lodging.” <a href="book-1.xhtml#noteref-59" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-60" epub:type="endnote">
 					<p>Catullus 29 and 57. <a href="book-1.xhtml#noteref-60" epub:type="backlink">↩</a></p>
