--- a/src/epub/text/colophon.xhtml
+++ b/src/epub/text/colophon.xhtml
@@ -22,7 +22,7 @@
 			<a href="https://thegriggs.org/david/">David Grigg</a>,<br/>
 			and is based on a transcription produced by<br/>
 			<a href="http://penelope.uchicago.edu/Thayer/E/home.html">Bill Thayer</a><br/>
-			and on digital scans available at the<br/>
+			and on digital scans from the<br/>
 			<a href="https://standardebooks.org/ebooks/suetonius/the-lives-of-the-caesars/j-c-rolfe#page-scans">Internet Archive</a>.</p>
 			<p>The cover page is adapted from<br/>
 			<i epub:type="se:name.visual-art.painting">The Triumph of Titus</i>,<br/>
