Adjust language semantics

--- a/src/epub/text/endnotes.xhtml
+++ b/src/epub/text/endnotes.xhtml
@@ -1339,7 +1339,7 @@
 					<p>The “stable” was in reality a kind of club, containing the quarters of the drivers as well as the stalls of the horses. <a href="book-4.xhtml#noteref-443" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-444" epub:type="endnote">
-					<p>The host at a dinner party often gave gifts to his guests to take away with them (hence called by the Greek name <span xml:lang="grc">apophoreta</span>); <abbr>cf.</abbr> <a href="book-2.xhtml#book-2-li-75">Augustus, 75</a>. <a href="book-4.xhtml#noteref-444" epub:type="backlink">↩</a></p>
+					<p>The host at a dinner party often gave gifts to his guests to take away with them (hence called by the Greek name <span xml:lang="grc-Latn">apophoreta</span>); <abbr>cf.</abbr> <a href="book-2.xhtml#book-2-li-75">Augustus, 75</a>. <a href="book-4.xhtml#noteref-444" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-445" epub:type="endnote">
 					<p>Swift, “Flyer.” <a href="book-4.xhtml#noteref-445" epub:type="backlink">↩</a></p>
@@ -1918,7 +1918,7 @@
 					<p>The heralds for the great festivals were selected by competition among the rival candidates. <a href="book-6.xhtml#noteref-636" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-637" epub:type="endnote">
-					<p>The Greek term <span xml:lang="grc">hieronices</span>, “victor in the sacred games,” indicates the religious nature of the festivals. <a href="book-6.xhtml#noteref-637" epub:type="backlink">↩</a></p>
+					<p>The Greek term <span xml:lang="grc-Latn">hieronices</span>, “victor in the sacred games,” indicates the religious nature of the festivals. <a href="book-6.xhtml#noteref-637" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-638" epub:type="endnote">
 					<p>That is, with local self-government, not with actual independence. <a href="book-6.xhtml#noteref-638" epub:type="backlink">↩</a></p>
