Update <hgroup> children after first <h#> to <p>, ref. new HTML standard

--- a/src/epub/text/book-7.xhtml
+++ b/src/epub/text/book-7.xhtml
@@ -12,7 +12,7 @@
 					<span epub:type="label">Book</span>
 					<span epub:type="ordinal z3998:roman">VII</span>
 				</h2>
-				<h3 epub:type="title">Galba⁠—Otho⁠—Vitellius</h3>
+				<p epub:type="title">Galba⁠—Otho⁠—Vitellius</p>
 			</hgroup>
 			<section id="book-7-1" epub:type="chapter">
 				<h3 epub:type="title">Galba</h3>
