--- a/src/epub/text/book-8.xhtml
+++ b/src/epub/text/book-8.xhtml
@@ -12,7 +12,7 @@
 					<span epub:type="label">Book</span>
 					<span epub:type="ordinal z3998:roman">VIII</span>
 				</h2>
-				<h3 epub:type="title">The Deified Vespasian⁠—The Deified Titus⁠—Domitian</h3>
+				<p epub:type="title">The Deified Vespasian⁠—The Deified Titus⁠—Domitian</p>
 			</hgroup>
 			<section id="book-8-1" epub:type="chapter">
 				<h3 epub:type="title">The Deified Vespasian</h3>
