--- a/src/epub/text/book-4.xhtml
+++ b/src/epub/text/book-4.xhtml
@@ -12,7 +12,7 @@
 					<span epub:type="label">Book</span>
 					<span epub:type="ordinal z3998:roman">IV</span>
 				</h2>
-				<h3 epub:type="title">Gaius Caligula</h3>
+				<p epub:type="title">Gaius Caligula</p>
 			</hgroup>
 			<ol>
 				<li>
