--- a/src/epub/text/endnotes.xhtml
+++ b/src/epub/text/endnotes.xhtml
@@ -2626,7 +2626,7 @@
 					<p><i epub:type="se:name.publication.poem">Iliad</i> 7.213. <a href="book-8.xhtml#noteref-872" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-873" epub:type="endnote">
-					<p>Menander, <abbr>Fr.</abbr> 223.2, Koch. <a href="book-8.xhtml#noteref-873" epub:type="backlink">↩</a></p>
+					<p>Menander, <abbr epub:type="z3998:name-title">Fr.</abbr> 223.2, Koch. <a href="book-8.xhtml#noteref-873" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-874" epub:type="endnote">
 					<p>Of Augustus; see <a href="book-2.xhtml#book-2-span-118">Augustus, 100.4</a>. <a href="book-8.xhtml#noteref-874" epub:type="backlink">↩</a></p>
